Custom notifications for contacts work again.

Patch by Lamarque Vieira Souza, thank you!

BUG:175687

svn path=/branches/KDE/4.2/kdenetwork/kopete/; revision=955078